# mapdisplay

./: .gitignore  .map_version  README.md  STORAGE_TEST_UPDATES.md  azure_authenticated_netcdf_visualisation_deployment.md  credentials.csv  docker-compose.yml  netcdf_visualisation_deployment_steps.md  pyproject.toml  secret.key
config/: .index.yaml  config.yaml  versions.json
src/md/: mapdisplay.py
src/md/model/: models.py  tile.py  version.py
src/md/preprocess/: preprocess.py  tile_builder.py
src/md/storage/: storage.py
src/md/ui/: display.py  generate_secrets.py
src/md/utils/: utils.py
tests/: test_filesystem_storage.py  test_storage.py  test_tile_builder.py  test_version.py
